--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,13 +2,13 @@
     background-size: cover;
     background-position: center;
     background-clip: content-box;
-    border: 6px solid white;
+    border: 6px #cddeee;
     height: 400px;
     width: 400px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     position: relative;
     margin: 0 auto;
-    margin-top: 30px;
+    /* margin-top: 30px; */
   }
   
   .card .fa-spinner {
