--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
   min-height: 100px;
-  background: #E5E5E5;
+  background: lavender;
   position: relative;
 }
 
@@ -9,6 +9,7 @@
   bottom: 0;
   left: 0;
   right: 0;
+  text-align: center;
   padding: 3px;
-  background: #B8B8B8;
+  background: mediumpurple;
 }
