--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,4 +1,5 @@
 .wrapper {
-  min-height: 100%;
-  padding-bottom: 100px;
+  min-height: 50%;
+  padding-bottom: 50px;
+  background-color: #cddeee;
 }
