--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,19 +1,21 @@
-.card {
-    background-size: cover;
-    background-position: center;
-    background-clip: content-box;
-    border: 6px #cddeee;
-    height: 400px;
-    width: 400px;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-    position: relative;
-    margin: 0 auto;
-    /* margin-top: 30px; */
-  }
-  
-  .card .fa-spinner {
-    font-size: 180px;
-    position: absolute;
-    left: 25%;
-    top: 25%;
-  }
+.g-card {
+  margin: 20px;
+}
+.g-card-image {
+  border-radius: 10px;
+  width: 300px;
+  height: 300px;
+  box-shadow: 0px 0px 3px 1px #ccc;
+}
+.g-card-info {
+  margin-top: 10px;
+  min-height: 100px;
+}
+.g-card-title {
+  font-size: 24px;
+  margin: 0px;
+}
+.g-card-sub-title {
+  font-size: 16px;
+  margin: 0px;
+}
