--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -1,5 +1,6 @@
 .wrapper {
   min-height: 10%;
   padding-bottom: 10px;
-  background-color: #cddeee; 
+  /* background-color: #cddeee;  */
+  /* opacity: 50%; */
 }
