--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 50px;
+  margin: 50px auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,13 +8,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
   background-image: url("./images/react_portfolio_bkgd_image.jpg");
-  position: fixed;
+  position: relative;
   min-width: 100%;
   min-height: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 10px;
 }
 
 code {
