--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body {
-  margin: 50px auto;
+  margin: 10px, auto;
+  /* padding-left: 50px auto;
+  padding-right: 50px auto; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -16,6 +18,11 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 10px;
+}
+
+paragraph {
+  margin-left: 10% auto;
+  margin-right: 10% auto;
 }
 
 code {
